[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/arrowed_button.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 23
font_data = ExtResource( 1 )

[node name="Menu" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vanity" type="Label" parent="Main"]
anchor_right = 1.0
margin_top = 37.6156
margin_bottom = 52.6156
custom_fonts/font = SubResource( 1 )
text = "A GAME BY NICE-SHOT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -61.0239
margin_bottom = 40.9761
custom_fonts/font = SubResource( 2 )
text = "ASTRO

BLASTER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBTN" parent="Main" instance=ExtResource( 3 )]
anchor_top = 0.758
anchor_bottom = 0.758
margin_left = 140.0
margin_top = -11.12
margin_right = -141.0
margin_bottom = 10.88
custom_fonts/font = SubResource( 5 )
text = "PLAY"

[node name="LeaderboardBTN" parent="Main" instance=ExtResource( 3 )]
anchor_top = 0.811
anchor_bottom = 0.811
margin_left = 92.0
margin_top = -11.04
margin_right = -91.0
margin_bottom = 10.96
custom_fonts/font = SubResource( 5 )
text = "LEADERBOARD"

[node name="OptionsBTN" parent="Main" instance=ExtResource( 3 )]
anchor_top = 0.864
anchor_bottom = 0.864
margin_left = 124.0
margin_top = -10.96
margin_right = -124.0
margin_bottom = 11.04
custom_fonts/font = SubResource( 5 )
text = "OPTIONS"

[node name="Leaderboard" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Leaderboard"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -280.725
margin_bottom = -178.725
custom_fonts/font = SubResource( 2 )
text = "LEADERBOARD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBTN" parent="Leaderboard" instance=ExtResource( 3 )]
anchor_top = 0.758
anchor_bottom = 0.758
margin_left = 140.0
margin_top = 67.714
margin_right = -141.0
margin_bottom = 89.714
custom_fonts/font = SubResource( 6 )
text = "BACK"
[connection signal="pressed" from="Main/PlayBTN" to="." method="play"]
[connection signal="pressed" from="Main/LeaderboardBTN" to="." method="set_screen_leaderboard"]
[connection signal="pressed" from="Main/OptionsBTN" to="." method="set_screen_options"]
[connection signal="pressed" from="Leaderboard/BackBTN" to="." method="set_screen_main"]
